[package]
authors = ['Trust Computing GmbH <info@litentry.com>']
edition = '2021'
homepage = 'https://litentry.com'
name = 'pallet-bridge-transfer'
repository = 'https://github.com/litentry/litentry-pallets'
version = '0.1.0'

[dependencies]
hex-literal = { workspace = true }
parity-scale-codec = { workspace = true }
scale-info = { workspace = true }

sp-arithmetic = { workspace = true }
sp-core = { workspace = true }
sp-io = { workspace = true }
sp-runtime = { workspace = true }
sp-std = { workspace = true }

frame-benchmarking = { workspace = true, optional = true }
frame-support = { workspace = true }
frame-system = { workspace = true }

pallet-bridge = { workspace = true }

[dev-dependencies]
pallet-balances = { workspace = true, features = ["std"] }
pallet-timestamp = { workspace = true, features = ["std"] }

[features]
default = ["std"]
runtime-benchmarks = [
    "frame-benchmarking/runtime-benchmarks",
    "frame-support/runtime-benchmarks",
    "frame-system/runtime-benchmarks",
    "pallet-bridge/runtime-benchmarks",
]
std = [
    "parity-scale-codec/std",
    "scale-info/std",
    "sp-std/std",
    "sp-runtime/std",
    "sp-io/std",
    "sp-core/std",
    "sp-arithmetic/std",
    "frame-support/std",
    "frame-system/std",
    "frame-benchmarking?/std",
    "pallet-bridge/std",
]
try-runtime = ["frame-support/try-runtime"]
