[package]
authors = ['Litentry Dev']
edition = '2021'
homepage = 'https://litentry.com'
name = 'pallet-bridge'
repository = 'https://github.com/litentry/litentry-pallets'
version = '0.1.0'

[dependencies]
# third-party dependencies
blake2-rfc = { version = "0.2.18", default-features = false }
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false, features = ["derive", "max-encoded-len"] }
scale-info = { version = "2.3.1", default-features = false, features = ["derive"] }

# primitives
sp-core = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.37", default-features = false }
sp-io = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.37", default-features = false }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.37", default-features = false }
sp-std = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.37", default-features = false }

# frame dependencies
frame-benchmarking = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.37", default-features = false, optional = true }
frame-support = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.37", default-features = false }
frame-system = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.37", default-features = false }

pallet-balances = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.37", default-features = false }

[features]
default = ["std"]
runtime-benchmarks = [
  "frame-benchmarking/runtime-benchmarks",
  "frame-support/runtime-benchmarks",
  "frame-system/runtime-benchmarks",
]
std = [
  "codec/std",
  "sp-std/std",
  "sp-runtime/std",
  "sp-io/std",
  "sp-core/std",
  "frame-support/std",
  "frame-system/std",
  "frame-benchmarking?/std",
  "pallet-balances/std",
]
try-runtime = ["frame-support/try-runtime"]
