[package]
authors = ['Litentry Dev']
description = 'Pallet for interacting with drop3 project'
edition = '2021'
homepage = 'https://litentry.com/'
license = 'GPL-3.0'
name = 'pallet-evm-address'
repository = 'https://github.com/litentry/litentry-parachain'
version = '0.1.0'

[dependencies]
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false, features = ["derive", "max-encoded-len"] }
scale-info = { version = "2.9.0", default-features = false, features = ["derive"] }

sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.39", default-features = false }
sp-std = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.39", default-features = false }

frame-support = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.39", default-features = false }
frame-system = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.39", default-features = false }

[dev-dependencies]
hex-literal = "0.4"
sp-core = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.39" }
sp-io = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.39" }
pallet-balances = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.39" }
pallet-timestamp = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.39" }

# EVM/Frontier
pallet-ethereum = { git = "https://github.com/paritytech/frontier", branch = "polkadot-v0.9.39", features = ["forbid-evm-reentrancy"] }
pallet-evm = { git = "https://github.com/paritytech/frontier", branch = "polkadot-v0.9.39", features = ["forbid-evm-reentrancy"] }
fp-evm = { git = "https://github.com/paritytech/frontier", branch = "polkadot-v0.9.39" }

[features]
default = ["std"]
runtime-benchmarks = [
    "frame-support/runtime-benchmarks",
    "frame-system/runtime-benchmarks",
    "pallet-ethereum/runtime-benchmarks",
]
std = [
    "codec/std",
    "sp-std/std",
    "sp-runtime/std",
    "frame-support/std",
    "frame-system/std",
]
try-runtime = ["frame-support/try-runtime"]
