[package]
authors = ['Litentry Dev']
description = 'Pallet for managing EVM and AccountId addresses'
edition = '2021'
homepage = 'https://litentry.com/'
license = 'GPL-3.0'
name = 'pallet-evm-address'
repository = 'https://github.com/litentry/litentry-parachain'
version = '0.1.0'

[dependencies]
parity-scale-codec = { workspace = true }
scale-info = { workspace = true }

frame-support = { workspace = true }
frame-system = { workspace = true }
sp-runtime = { workspace = true }
sp-std = { workspace = true }

[dev-dependencies]
hex-literal = { workspace = true }
sp-core = { workspace = true, features = ["std"] }
sp-io = { workspace = true, features = ["std"] }
pallet-balances = { workspace = true, features = ["std"] }
pallet-timestamp = { workspace = true, features = ["std"] }
pallet-ethereum = { workspace = true, features = ["std"] }
pallet-evm = { workspace = true, features = ["std"] }
fp-evm = { workspace = true, features = ["std"] }

[features]
default = ["std"]
runtime-benchmarks = [
    "frame-support/runtime-benchmarks",
    "frame-system/runtime-benchmarks",
    "pallet-ethereum/runtime-benchmarks",
]
std = [
    "parity-scale-codec/std",
    "scale-info/std",
    "sp-std/std",
    "sp-runtime/std",
    "frame-support/std",
    "frame-system/std",
]
try-runtime = ["frame-support/try-runtime"]
