[package]
authors = ['Litentry Dev']
edition = '2021'
homepage = 'https://litentry.com'
name = 'pallet-identity-management-mock'
repository = 'https://github.com/litentry/litentry-parachain'
version = '0.1.0'

[dependencies]
# third-party dependencies
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false, features = ["derive", "max-encoded-len"] }
log = { version = "0.4", default-features = false }
scale-info = { version = "2.1.1", default-features = false, features = ["derive"] }
# primitives
sp-arithmetic = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.26", default-features = false }
sp-core = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.26", default-features = false }
sp-io = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.26", default-features = false }
sp-keyring = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.26", default-features = false }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.26", default-features = false }
sp-std = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.26", default-features = false }

# frame dependencies
frame-support = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.26", default-features = false }
frame-system = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.26", default-features = false }

# benchmarking
frame-benchmarking = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.26", default-features = false, optional = true }
hex = { version = "0.4", default-features = false }
hex-literal = { version = "0.3.2", optional = true }

primitives = { path = "../../primitives", default-features = false }
rsa = { git = "https://github.com/Kailai-Wang/RustCrypto-RSA", default-features = false, features = ["serde", "pem"] }

[dev-dependencies]
hex-literal = { version = "0.3.2" }
pallet-balances = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.26" }
pallet-timestamp = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.26" }
rand = "0.8"
sha2 = { version = "0.10.2", default-features = false }
signature = { version = ">=1.4, <1.7", default-features = false, features = ["rand-preview"] }
sp-core = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.26" }

[features]
default = ["std"]
runtime-benchmarks = [
  "frame-benchmarking",
  "hex-literal",
]
std = [
  "codec/std",
  "sp-std/std",
  "sp-runtime/std",
  "sp-io/std",
  "sp-core/std",
  "sp-arithmetic/std",
  "frame-support/std",
  "frame-system/std",
  "frame-benchmarking/std",
  "rsa/std",
]
