[package]
authors = ['Litentry Dev']
edition = '2021'
homepage = 'https://litentry.com'
name = 'pallet-identity-management-mock'
repository = 'https://github.com/litentry/litentry-parachain'
version = '0.1.0'

[dependencies]
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false, features = ["derive", "max-encoded-len"] }
log = { version = "0.4", default-features = false }
scale-info = { version = "2.1.1", default-features = false, features = ["derive"] }

sp-arithmetic = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.28", default-features = false }
sp-core = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.28", default-features = false }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.28", default-features = false }
sp-std = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.28", default-features = false }

frame-benchmarking = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.28", default-features = false, optional = true }
frame-support = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.28", default-features = false }
frame-system = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.28", default-features = false }

hex = { version = "0.4", default-features = false }
hex-literal = { version = "0.3.2" }
primitives = { path = "../../primitives", default-features = false }
rand_chacha = { version = "0.3", default-features = false }
rsa = { git = "https://github.com/litentry/RustCrypto-RSA", default-features = false, features = ["serde", "pem"] }

[dev-dependencies]
pallet-balances = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.28" }
pallet-timestamp = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.28" }
rand_chacha = { version = "0.3" }
sha2 = { version = "0.10.2" }
signature = { version = ">=1.4, <1.7", features = ["rand-preview"] }
sp-io = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.28" }

[features]
default = ["std"]
runtime-benchmarks = [
  "frame-benchmarking/runtime-benchmarks",
  "frame-support/runtime-benchmarks",
  "frame-system/runtime-benchmarks",
]
std = [
  "codec/std",
  "sp-std/std",
  "sp-runtime/std",
  "sp-io/std",
  "sp-core/std",
  "sp-arithmetic/std",
  "frame-support/std",
  "frame-system/std",
  "frame-benchmarking/std",
  "rsa/std",
]
