[package]
authors = ['Litentry Dev']
edition = '2021'
homepage = 'https://litentry.com'
name = 'pallet-identity-management-mock'
repository = 'https://github.com/litentry/litentry-parachain'
version = '0.1.0'

[dependencies]
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false, features = ["derive", "max-encoded-len"] }
log = { version = "0.4", default-features = false }
scale-info = { version = "2.3.1", default-features = false, features = ["derive"] }

sp-arithmetic = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.37", default-features = false }
sp-core = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.37", default-features = false }
sp-io = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.37", default-features = false }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.37", default-features = false }
sp-std = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.37", default-features = false }

frame-benchmarking = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.37", default-features = false, optional = true }
frame-support = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.37", default-features = false }
frame-system = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.37", default-features = false }

core-primitives = { path = "../../primitives/core", default-features = false }
mock-tee-primitives = { path = "../../mock-tee-primitives", default-features = false }
pallet-identity-management = { path = "../../pallets/identity-management", default-features = false }

aes-gcm = { git = "https://github.com/RustCrypto/AEADs", default-features = false, features = ["aes", "alloc"] }
hex = { version = "0.4", default-features = false }
hex-literal = { version = "0.3.2" }
rsa = { git = "https://github.com/litentry/RustCrypto-RSA", default-features = false, features = ["serde", "pem"] }
sha2 = { version = "0.10.2", default-features = false }

[dev-dependencies]
aes-gcm = { git = "https://github.com/RustCrypto/AEADs" }
pallet-balances = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.37" }
pallet-timestamp = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.37" }
parity-crypto = { version = "0.9.0", features = ["publickey"] }
rand = { version = "0.8" }
rand_chacha = { version = "0.3" }
sha2 = { version = "0.10.2" }
signature = { version = ">=1.4, <1.7", features = ["rand-preview"] }
sp-io = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.37" }

[features]
default = ["std"]
runtime-benchmarks = [
  "frame-benchmarking/runtime-benchmarks",
  "frame-support/runtime-benchmarks",
  "frame-system/runtime-benchmarks",
]
std = [
  "log/std",
  "codec/std",
  "sp-std/std",
  "sp-runtime/std",
  "sp-io/std",
  "sp-core/std",
  "sp-arithmetic/std",
  "frame-support/std",
  "frame-system/std",
  "frame-benchmarking?/std",
  "rsa/std",
]
try-runtime = ["frame-support/try-runtime"]
