[package]
authors = ['Litentry Dev']
edition = '2021'
homepage = 'https://litentry.com'
name = 'pallet-identity-management'
repository = 'https://github.com/litentry/litentry-parachain'
version = '0.1.0'

[dependencies]
# third-party dependencies
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false, features = ["derive", "max-encoded-len"] }
log = { version = "0.4", default-features = false }
pallet-teerex = { path = "../teerex", default-features = false }
scale-info = { version = "2.3.1", default-features = false, features = ["derive"] }

# primitives
sp-arithmetic = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.37", default-features = false }
sp-core = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.37", default-features = false }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.37", default-features = false }
sp-std = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.37", default-features = false }

# frame dependencies
frame-support = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.37", default-features = false }
frame-system = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.37", default-features = false }

# benchmarking
frame-benchmarking = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.37", default-features = false, optional = true }
hex = { version = "0.4", default-features = false }

# local
core-primitives = { path = "../../primitives/core", default-features = false }

[dev-dependencies]
pallet-balances = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.37" }
pallet-teerex = { path = "../teerex", features = ["skip-scheduled-enclave-check"] }
pallet-timestamp = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.37" }
sp-io = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.37" }

[features]
default = ["std"]
runtime-benchmarks = [
  "frame-benchmarking/runtime-benchmarks",
  "frame-support/runtime-benchmarks",
  "frame-system/runtime-benchmarks",
]
skip-ias-check = [
  "pallet-teerex/skip-ias-check",
]
std = [
  "codec/std",
  "sp-std/std",
  "sp-runtime/std",
  "sp-io/std",
  "sp-core/std",
  "sp-arithmetic/std",
  "frame-support/std",
  "frame-system/std",
  "frame-benchmarking?/std",
  "core-primitives/std",
  "pallet-teerex/std",
]
try-runtime = ["frame-support/try-runtime"]
