[package]
name = "pallet-parachain-staking"
authors = [ "Litentry" ]
description = "parachain staking pallet for collator selection and reward distribution"
edition = '2021'
homepage = 'https://litentry.com/'
license = 'GPL-3.0'
repository = 'https://github.com/litentry/litentry-parachain'
version = "0.1.0"

[dependencies]
log = "0.4"
serde = { version = "1.0.101", optional = true }

primitives = { path = "../../primitives", default-features = false }

# Substrate
frame-benchmarking = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.26", optional = true, default-features = false }
frame-support = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.26", default-features = false }
frame-system = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.26", default-features = false }
pallet-authorship = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.26", default-features = false}
pallet-balances = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.26", default-features = false }
pallet-session = {git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.26", default-features = false}
parity-scale-codec = { version = "3.0.0", default-features = false, features = [ "derive" ] }
scale-info = { version = "2.0", default-features = false, features = [ "derive" ] }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.26", default-features = false }
sp-std = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.26", default-features = false }
substrate-fixed = { git = "https://github.com/encointer/substrate-fixed", default-features = false }
sp-staking = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.26", default-features = false}

[dev-dependencies]
similar-asserts = "1.1.0"

sp-core = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.26" }
sp-io = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.26" }

[features]
default = [ "std" ]
std = [
	"frame-benchmarking/std",
	"frame-support/std",
	"frame-system/std",
	"pallet-authorship/std",
	"pallet-balances/std",
	"pallet-session/std",
	"parity-scale-codec/std",
	"primitives/std",
	"scale-info/std",
	"serde",
	"sp-runtime/std",
	"sp-std/std",
	"sp-staking/std",
]
runtime-benchmarks = [ "frame-benchmarking" ]
try-runtime = [ "frame-support/try-runtime" ]
